# darknet_actions

./: CMakeLists.txt  package.xml
action/: obj_detection.action
src/: obj_detection_client.cpp  obj_detection_server.cpp
